<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Clear</string>

    <string name="back">back</string>
    <string name="version">Version 1.0</string>
    <string name="derechos">&#169; 2015 CC Studio</string>
    <string name="contacto">contacto@cesarcorona.ninja</string>
    <string name="goBack">back</string>
    <string name="about">About</string>
    <string name="rate">Rate this app</string>
    <string name="exit">Exit</string>
    <string name="simbolo_divicion">&#xf7;</string>


    <string name="title_activity_about">Información</string>

</resources>
