
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#323232"
        xmlns:android="http://schemas.android.com/apk/res/android"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center|bottom"
            android:text="@string/app_name"
            android:textColor="#FFC107"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="26sp"
            android:text="@string/version"
            android:gravity="center|top"
            android:textColor="#FFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/derechos"
            android:gravity="center|bottom"
            android:textColor="#FFC107"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/contacto"
            android:singleLine="true"
            android:textColor="#FFF"
            android:gravity="center|top"/>
    <Button
        android:id="@+id/button_about_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/goBack"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:onClick="returnCaluladora"
        android:background="@drawable/mi_button"
        android:textColor="#FFF"
        />

    </LinearLayout>

