<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_id_view">
<HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2.5"
    android:layout_gravity="end"
    android:isScrollContainer="true"
    android:scrollbars="none"
    android:id="@+id/scroll_view_operation">

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAllCaps="true"
        android:text=""
        android:textSize="70sp"
        android:gravity="end|center_vertical"
        android:cursorVisible="true"

        />

</HorizontalScrollView>



       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="7"
           android:padding="0dp"
           android:layout_margin="0dp">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:background="#212121"
               android:layout_weight="2"
               android:orientation="vertical"

               >
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"

                  >
                   <Button
                       android:id="@+id/button_back"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:text="@string/back"
                       android:onClick="calculatorOnClick"

                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"
                       android:textAllCaps="true"
                       />
                   <Button
                       android:id="@+id/button_clear"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:text="@string/clear"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"
                       android:textAllCaps="true"
                       />
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1">
                   <Button
                       android:id="@+id/button_seven"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:text="7"
                       android:onClick="calculatorOnClick"

                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"
                       />
                   <Button
                       android:id="@+id/button_eight"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="8"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_nine"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="9"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1">
                   <Button
                       android:id="@+id/button_four"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="4"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_five"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="5"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_six"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="6"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1">
                   <Button
                       android:id="@+id/button_one"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="1"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_two"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="2"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_three"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="3"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1">
                   <Button
                       android:id="@+id/button_point"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="."
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_zero"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="0"
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
                   <Button
                       android:id="@+id/button_equals"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:text="="
                       android:layout_weight="1"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button"
                       android:textColor="#FFF"/>
               </LinearLayout>

            </LinearLayout>
           <View
               android:layout_width="4dp"
               android:layout_height="match_parent"
               android:background="#BF360C">

           </View>
           <View
               android:layout_width="4dp"
               android:layout_height="match_parent"
               android:background="#212121">

           </View>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="vertical"
               android:background="#BF360C"
               >

                   <Button
                       android:id="@+id/button_plus"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="+"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button_red"
                       android:textColor="@color/mi_color"
                       android:textSize="30sp"
                       />
                   <Button
                       android:id="@+id/button_minus"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="-"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button_red"
                       android:textColor="@color/mi_color"
                       android:textSize="30sp"/>
                   <Button
                       android:id="@+id/button_multiply"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="*"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button_red"
                       android:textColor="@color/mi_color"
                       android:textSize="30sp"
                       />
                   <Button
                       android:id="@+id/button_division"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="@string/simbolo_divicion"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button_red"
                       android:textColor="@color/mi_color"
                       android:textSize="30sp"/>
                   <Button
                       android:id="@+id/button_root"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="sqrt"
                       android:onClick="calculatorOnClick"
                       android:background="@drawable/mi_button_red"
                       android:textColor="@color/mi_color"
                       android:textSize="26sp"
                       android:textAllCaps="true"/>
                   <Button
                       android:id="@+id/button_pow"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       android:text="^"
                       android:background="@drawable/mi_button_red"
                       android:textColor="@color/mi_color"
                       android:onClick="calculatorOnClick"

                       android:textSize="30sp"
                       />

           </LinearLayout>

       </LinearLayout>

</LinearLayout>
